NetBSD Problem Report #47571

From www@NetBSD.org  Fri Feb 15 12:57:05 2013
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 606A663E520
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 15 Feb 2013 12:57:05 +0000 (UTC)
Message-Id: <20130215125704.1209C63E520@www.NetBSD.org>
Date: Fri, 15 Feb 2013 12:57:04 +0000 (UTC)
From: kanaoka@ann.hi-ho.ne.jp
Reply-To: kanaoka@ann.hi-ho.ne.jp
To: gnats-bugs@NetBSD.org
Subject: acpi_md_OsWritable() never return TRUE
X-Send-Pr-Version: www-1.0

>Number:         47571
>Category:       kern
>Synopsis:       acpi_md_OsWritable() never return TRUE
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 15 13:00:01 +0000 2013
>Closed-Date:    Mon Oct 07 13:55:25 +0000 2013
>Last-Modified:  Mon Oct 07 13:55:25 +0000 2013
>Originator:     Masanori Kanaoka
>Release:        NetBSD-current/i386
>Organization:
>Environment:
NetBSD white.k.vnop.net 6.99.15 NetBSD 6.99.15 (GENERIC) #0: Wed Dec 19 10:16:56 JST 2012  root@white.k.vnop.net:/usr/obj/sys/arch/i386/compile/GENERIC i386

>Description:
I look sys/arch/x86/acpi/acpi_machdep.c:

I found below:
acpi_md_OsReadable() return TRUE and FALSE
,but acpi_md_OsWritable() return FALSE only.

it may be trivial.
>How-To-Repeat:

>Fix:
Index: sys/arch/x86/acpi/acpi_machdep.c
===================================================================
RCS file: /ftp/cvs/src/sys/arch/x86/acpi/acpi_machdep.c,v
retrieving revision 1.4
diff -u -r1.4 acpi_machdep.c
--- sys/arch/x86/acpi/acpi_machdep.c    23 Sep 2012 00:31:05 -0000      1.4
+++ sys/arch/x86/acpi/acpi_machdep.c    15 Feb 2013 12:44:31 -0000
@@ -243,7 +243,7 @@
 BOOLEAN
 acpi_md_OsWritable(void *Pointer, uint32_t Length)
 {
-       BOOLEAN rv = FALSE;
+       BOOLEAN rv = TRUE;
        vaddr_t sva, eva;
        pt_entry_t *pte;


>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47571 CVS commit: src/sys/arch/x86/acpi
Date: Sun, 6 Oct 2013 16:34:49 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Sun Oct  6 16:34:49 UTC 2013

 Modified Files:
 	src/sys/arch/x86/acpi: acpi_machdep.c

 Log Message:
 Correct acpi_md_OsWritable() logic so that it can return TRUE.
 From Masanori Kanaoka in PR 47571.


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/sys/arch/x86/acpi/acpi_machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Sun, 06 Oct 2013 16:36:06 +0000
State-Changed-Why:
patch committed


From: Masanori Kanaoka <kanaoka@ann.hi-ho.ne.jp>
To: gnats-bugs@NetBSD.org, jakllsch@NetBSD.org
Cc: kern-bug-people@netbsd.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org
Subject: Re: kern/47571 (acpi_md_OsWritable() never return TRUE)
Date: Mon, 07 Oct 2013 20:44:17 +0900 (JST)

 Hi,

 Thank you!
 Would you please close PR.

 Best Regards.
 ---
  Masanori Kanaoka        kanaoka AT ann.hi-ho.ne.jp

State-Changed-From-To: feedback->closed
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Mon, 07 Oct 2013 13:55:25 +0000
State-Changed-Why:
Patch commited, submitter requests closure.
.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.