Correct acpi_md_OsWritable() logic so that it can return TRUE. From Masanori Kanaoka in PR 47571.